3_Semantic/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl

    6 saveName: ID

    7 saveNumber: NUM

    8 var_decl: type_spec saveName SEMI
    9         | type_spec saveName LBRACE saveNumber RBRACE SEMI

   10 type_spec: INT
   11          | VOID

   12 @1: %empty

   13 fun_decl: type_spec saveName @1 LPAREN params RPAREN comp_stmt

   14 params: param_list
   15       | type_spec

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_spec saveName
   19      | type_spec saveName LBRACE RBRACE

   20 comp_stmt: LCURLY local_decls stmt_list RCURLY

   21 local_decls: local_decls var_decl
   22            | %empty

   23 stmt_list: stmt_list stmt
   24          | %empty

   25 stmt: exp_stmt
   26     | comp_stmt
   27     | sel_stmt
   28     | iter_stmt
   29     | ret_stmt

   30 exp_stmt: exp SEMI
   31         | SEMI

   32 sel_stmt: IF LPAREN exp RPAREN stmt
   33         | IF LPAREN exp RPAREN stmt ELSE stmt

   34 iter_stmt: WHILE LPAREN exp RPAREN stmt

   35 ret_stmt: RETURN SEMI
   36         | RETURN exp SEMI

   37 exp: var ASSIGN exp
   38    | simple_exp

   39 var: saveName

   40 @2: %empty

   41 var: saveName @2 LBRACE exp RBRACE

   42 simple_exp: add_exp LE add_exp
   43           | add_exp LT add_exp
   44           | add_exp GT add_exp
   45           | add_exp GE add_exp
   46           | add_exp EQ add_exp
   47           | add_exp NE add_exp
   48           | add_exp

   49 add_exp: add_exp PLUS term
   50        | add_exp MINUS term
   51        | term

   52 term: term TIMES factor
   53     | term OVER factor
   54     | factor

   55 factor: LPAREN exp RPAREN
   56       | var
   57       | call
   58       | saveNumber

   59 @3: %empty

   60 call: saveName @3 LPAREN args RPAREN

   61 args: arg_list
   62     | %empty

   63 arg_list: arg_list COMMA exp
   64         | exp


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 32 33
ELSE (259) 33
WHILE (260) 34
RETURN (261) 35 36
INT (262) 10
VOID (263) 11
ID (264) 6
NUM (265) 7
EQ (266) 46
NE (267) 47
LT (268) 43
LE (269) 42
GT (270) 44
GE (271) 45
ASSIGN (272) 37
PLUS (273) 49
MINUS (274) 50
TIMES (275) 52
OVER (276) 53
LPAREN (277) 13 32 33 34 55 60
RPAREN (278) 13 32 33 34 55 60
LBRACE (279) 9 19 41
RBRACE (280) 9 19 41
LCURLY (281) 20
RCURLY (282) 20
SEMI (283) 8 9 30 31 35 36
COMMA (284) 16 63
ERROR (285)
NO_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
decl_list (34)
    on left: 2 3, on right: 1 2
decl (35)
    on left: 4 5, on right: 2 3
saveName (36)
    on left: 6, on right: 8 9 13 18 19 39 41 60
saveNumber (37)
    on left: 7, on right: 9 58
var_decl (38)
    on left: 8 9, on right: 4 21
type_spec (39)
    on left: 10 11, on right: 8 9 13 15 18 19
fun_decl (40)
    on left: 13, on right: 5
@1 (41)
    on left: 12, on right: 13
params (42)
    on left: 14 15, on right: 13
param_list (43)
    on left: 16 17, on right: 14 16
param (44)
    on left: 18 19, on right: 16 17
comp_stmt (45)
    on left: 20, on right: 13 26
local_decls (46)
    on left: 21 22, on right: 20 21
stmt_list (47)
    on left: 23 24, on right: 20 23
stmt (48)
    on left: 25 26 27 28 29, on right: 23 32 33 34
exp_stmt (49)
    on left: 30 31, on right: 25
sel_stmt (50)
    on left: 32 33, on right: 27
iter_stmt (51)
    on left: 34, on right: 28
ret_stmt (52)
    on left: 35 36, on right: 29
exp (53)
    on left: 37 38, on right: 30 32 33 34 36 37 41 55 63 64
var (54)
    on left: 39 41, on right: 37 56
@2 (55)
    on left: 40, on right: 41
simple_exp (56)
    on left: 42 43 44 45 46 47 48, on right: 38
add_exp (57)
    on left: 49 50 51, on right: 42 43 44 45 46 47 48 49 50
term (58)
    on left: 52 53 54, on right: 49 50 51 52 53
factor (59)
    on left: 55 56 57 58, on right: 52 53 54
call (60)
    on left: 60, on right: 57
@3 (61)
    on left: 59, on right: 60
args (62)
    on left: 61 62, on right: 60
arg_list (63)
    on left: 63 64, on right: 61 63


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program    go to state 3
    decl_list  go to state 4
    decl       go to state 5
    var_decl   go to state 6
    type_spec  go to state 7
    fun_decl   go to state 8


State 1

   10 type_spec: INT .

    $default  reduce using rule 10 (type_spec)


State 2

   11 type_spec: VOID .

    $default  reduce using rule 11 (type_spec)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: decl_list .
    2 decl_list: decl_list . decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl       go to state 10
    var_decl   go to state 6
    type_spec  go to state 7
    fun_decl   go to state 8


State 5

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 6

    4 decl: var_decl .

    $default  reduce using rule 4 (decl)


State 7

    8 var_decl: type_spec . saveName SEMI
    9         | type_spec . saveName LBRACE saveNumber RBRACE SEMI
   13 fun_decl: type_spec . saveName @1 LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 11

    saveName  go to state 12


State 8

    5 decl: fun_decl .

    $default  reduce using rule 5 (decl)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 11

    6 saveName: ID .

    $default  reduce using rule 6 (saveName)


State 12

    8 var_decl: type_spec saveName . SEMI
    9         | type_spec saveName . LBRACE saveNumber RBRACE SEMI
   13 fun_decl: type_spec saveName . @1 LPAREN params RPAREN comp_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


State 13

    9 var_decl: type_spec saveName LBRACE . saveNumber RBRACE SEMI

    NUM  shift, and go to state 16

    saveNumber  go to state 17


State 14

    8 var_decl: type_spec saveName SEMI .

    $default  reduce using rule 8 (var_decl)


State 15

   13 fun_decl: type_spec saveName @1 . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 18


State 16

    7 saveNumber: NUM .

    $default  reduce using rule 7 (saveNumber)


State 17

    9 var_decl: type_spec saveName LBRACE saveNumber . RBRACE SEMI

    RBRACE  shift, and go to state 19


State 18

   13 fun_decl: type_spec saveName @1 LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec   go to state 20
    params      go to state 21
    param_list  go to state 22
    param       go to state 23


State 19

    9 var_decl: type_spec saveName LBRACE saveNumber RBRACE . SEMI

    SEMI  shift, and go to state 24


State 20

   15 params: type_spec .
   18 param: type_spec . saveName
   19      | type_spec . saveName LBRACE RBRACE

    ID  shift, and go to state 11

    $default  reduce using rule 15 (params)

    saveName  go to state 25


State 21

   13 fun_decl: type_spec saveName @1 LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 26


State 22

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 14 (params)


State 23

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


State 24

    9 var_decl: type_spec saveName LBRACE saveNumber RBRACE SEMI .

    $default  reduce using rule 9 (var_decl)


State 25

   18 param: type_spec saveName .
   19      | type_spec saveName . LBRACE RBRACE

    LBRACE  shift, and go to state 28

    $default  reduce using rule 18 (param)


State 26

   13 fun_decl: type_spec saveName @1 LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 29

    comp_stmt  go to state 30


State 27

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_spec  go to state 31
    param      go to state 32


State 28

   19 param: type_spec saveName LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 29

   20 comp_stmt: LCURLY . local_decls stmt_list RCURLY

    $default  reduce using rule 22 (local_decls)

    local_decls  go to state 34


State 30

   13 fun_decl: type_spec saveName @1 LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 13 (fun_decl)


State 31

   18 param: type_spec . saveName
   19      | type_spec . saveName LBRACE RBRACE

    ID  shift, and go to state 11

    saveName  go to state 25


State 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


State 33

   19 param: type_spec saveName LBRACE RBRACE .

    $default  reduce using rule 19 (param)


State 34

   20 comp_stmt: LCURLY local_decls . stmt_list RCURLY
   21 local_decls: local_decls . var_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 24 (stmt_list)

    var_decl   go to state 35
    type_spec  go to state 36
    stmt_list  go to state 37


State 35

   21 local_decls: local_decls var_decl .

    $default  reduce using rule 21 (local_decls)


State 36

    8 var_decl: type_spec . saveName SEMI
    9         | type_spec . saveName LBRACE saveNumber RBRACE SEMI

    ID  shift, and go to state 11

    saveName  go to state 38


State 37

   20 comp_stmt: LCURLY local_decls stmt_list . RCURLY
   23 stmt_list: stmt_list . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 43
    SEMI    shift, and go to state 44

    saveName    go to state 45
    saveNumber  go to state 46
    comp_stmt   go to state 47
    stmt        go to state 48
    exp_stmt    go to state 49
    sel_stmt    go to state 50
    iter_stmt   go to state 51
    ret_stmt    go to state 52
    exp         go to state 53
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 38

    8 var_decl: type_spec saveName . SEMI
    9         | type_spec saveName . LBRACE saveNumber RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


State 39

   32 sel_stmt: IF . LPAREN exp RPAREN stmt
   33         | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 60


State 40

   34 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 61


State 41

   35 ret_stmt: RETURN . SEMI
   36         | RETURN . exp SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    SEMI    shift, and go to state 62

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 63
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 42

   55 factor: LPAREN . exp RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 64
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 43

   20 comp_stmt: LCURLY local_decls stmt_list RCURLY .

    $default  reduce using rule 20 (comp_stmt)


State 44

   31 exp_stmt: SEMI .

    $default  reduce using rule 31 (exp_stmt)


State 45

   39 var: saveName .
   41    | saveName . @2 LBRACE exp RBRACE
   60 call: saveName . @3 LPAREN args RPAREN

    LPAREN    reduce using rule 59 (@3)
    LBRACE    reduce using rule 40 (@2)
    $default  reduce using rule 39 (var)

    @2  go to state 65
    @3  go to state 66


State 46

   58 factor: saveNumber .

    $default  reduce using rule 58 (factor)


State 47

   26 stmt: comp_stmt .

    $default  reduce using rule 26 (stmt)


State 48

   23 stmt_list: stmt_list stmt .

    $default  reduce using rule 23 (stmt_list)


State 49

   25 stmt: exp_stmt .

    $default  reduce using rule 25 (stmt)


State 50

   27 stmt: sel_stmt .

    $default  reduce using rule 27 (stmt)


State 51

   28 stmt: iter_stmt .

    $default  reduce using rule 28 (stmt)


State 52

   29 stmt: ret_stmt .

    $default  reduce using rule 29 (stmt)


State 53

   30 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 67


State 54

   37 exp: var . ASSIGN exp
   56 factor: var .

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 56 (factor)


State 55

   38 exp: simple_exp .

    $default  reduce using rule 38 (exp)


State 56

   42 simple_exp: add_exp . LE add_exp
   43           | add_exp . LT add_exp
   44           | add_exp . GT add_exp
   45           | add_exp . GE add_exp
   46           | add_exp . EQ add_exp
   47           | add_exp . NE add_exp
   48           | add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    EQ     shift, and go to state 69
    NE     shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 48 (simple_exp)


State 57

   51 add_exp: term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 51 (add_exp)


State 58

   54 term: factor .

    $default  reduce using rule 54 (term)


State 59

   57 factor: call .

    $default  reduce using rule 57 (factor)


State 60

   32 sel_stmt: IF LPAREN . exp RPAREN stmt
   33         | IF LPAREN . exp RPAREN stmt ELSE stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 79
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 61

   34 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 80
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 62

   35 ret_stmt: RETURN SEMI .

    $default  reduce using rule 35 (ret_stmt)


State 63

   36 ret_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 81


State 64

   55 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 82


State 65

   41 var: saveName @2 . LBRACE exp RBRACE

    LBRACE  shift, and go to state 83


State 66

   60 call: saveName @3 . LPAREN args RPAREN

    LPAREN  shift, and go to state 84


State 67

   30 exp_stmt: exp SEMI .

    $default  reduce using rule 30 (exp_stmt)


State 68

   37 exp: var ASSIGN . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 85
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 69

   46 simple_exp: add_exp EQ . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 87
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 70

   47 simple_exp: add_exp NE . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 88
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 71

   43 simple_exp: add_exp LT . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 89
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 72

   42 simple_exp: add_exp LE . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 90
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 73

   44 simple_exp: add_exp GT . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 91
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 74

   45 simple_exp: add_exp GE . add_exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    add_exp     go to state 92
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 75

   49 add_exp: add_exp PLUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    term        go to state 93
    factor      go to state 58
    call        go to state 59


State 76

   50 add_exp: add_exp MINUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    term        go to state 94
    factor      go to state 58
    call        go to state 59


State 77

   52 term: term TIMES . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    factor      go to state 95
    call        go to state 59


State 78

   53 term: term OVER . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    var         go to state 86
    factor      go to state 96
    call        go to state 59


State 79

   32 sel_stmt: IF LPAREN exp . RPAREN stmt
   33         | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 97


State 80

   34 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 98


State 81

   36 ret_stmt: RETURN exp SEMI .

    $default  reduce using rule 36 (ret_stmt)


State 82

   55 factor: LPAREN exp RPAREN .

    $default  reduce using rule 55 (factor)


State 83

   41 var: saveName @2 LBRACE . exp RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 99
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 84

   60 call: saveName @3 LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    $default  reduce using rule 62 (args)

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 100
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59
    args        go to state 101
    arg_list    go to state 102


State 85

   37 exp: var ASSIGN exp .

    $default  reduce using rule 37 (exp)


State 86

   56 factor: var .

    $default  reduce using rule 56 (factor)


State 87

   46 simple_exp: add_exp EQ add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 46 (simple_exp)


State 88

   47 simple_exp: add_exp NE add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 47 (simple_exp)


State 89

   43 simple_exp: add_exp LT add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 43 (simple_exp)


State 90

   42 simple_exp: add_exp LE add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 42 (simple_exp)


State 91

   44 simple_exp: add_exp GT add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 44 (simple_exp)


State 92

   45 simple_exp: add_exp GE add_exp .
   49 add_exp: add_exp . PLUS term
   50        | add_exp . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 45 (simple_exp)


State 93

   49 add_exp: add_exp PLUS term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 49 (add_exp)


State 94

   50 add_exp: add_exp MINUS term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 50 (add_exp)


State 95

   52 term: term TIMES factor .

    $default  reduce using rule 52 (term)


State 96

   53 term: term OVER factor .

    $default  reduce using rule 53 (term)


State 97

   32 sel_stmt: IF LPAREN exp RPAREN . stmt
   33         | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    saveName    go to state 45
    saveNumber  go to state 46
    comp_stmt   go to state 47
    stmt        go to state 103
    exp_stmt    go to state 49
    sel_stmt    go to state 50
    iter_stmt   go to state 51
    ret_stmt    go to state 52
    exp         go to state 53
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 98

   34 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    saveName    go to state 45
    saveNumber  go to state 46
    comp_stmt   go to state 47
    stmt        go to state 104
    exp_stmt    go to state 49
    sel_stmt    go to state 50
    iter_stmt   go to state 51
    ret_stmt    go to state 52
    exp         go to state 53
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 99

   41 var: saveName @2 LBRACE exp . RBRACE

    RBRACE  shift, and go to state 105


State 100

   64 arg_list: exp .

    $default  reduce using rule 64 (arg_list)


State 101

   60 call: saveName @3 LPAREN args . RPAREN

    RPAREN  shift, and go to state 106


State 102

   61 args: arg_list .
   63 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 107

    $default  reduce using rule 61 (args)


State 103

   32 sel_stmt: IF LPAREN exp RPAREN stmt .
   33         | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 108

    $default  reduce using rule 32 (sel_stmt)


State 104

   34 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 34 (iter_stmt)


State 105

   41 var: saveName @2 LBRACE exp RBRACE .

    $default  reduce using rule 41 (var)


State 106

   60 call: saveName @3 LPAREN args RPAREN .

    $default  reduce using rule 60 (call)


State 107

   63 arg_list: arg_list COMMA . exp

    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42

    saveName    go to state 45
    saveNumber  go to state 46
    exp         go to state 109
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 108

   33 sel_stmt: IF LPAREN exp RPAREN stmt ELSE . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 16
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    saveName    go to state 45
    saveNumber  go to state 46
    comp_stmt   go to state 47
    stmt        go to state 110
    exp_stmt    go to state 49
    sel_stmt    go to state 50
    iter_stmt   go to state 51
    ret_stmt    go to state 52
    exp         go to state 53
    var         go to state 54
    simple_exp  go to state 55
    add_exp     go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 109

   63 arg_list: arg_list COMMA exp .

    $default  reduce using rule 63 (arg_list)


State 110

   33 sel_stmt: IF LPAREN exp RPAREN stmt ELSE stmt .

    $default  reduce using rule 33 (sel_stmt)
